# My-Little-OS

./: .gitignore  CMakeLists.txt  main.c
inc/: appCfgSelector.h
inc/app/: appCommon.h
inc/app/engine2D/: app.h  appConfig.h
inc/app/euclidEngine/: appConfig.h
inc/app/sample/: app.h  appConfig.h
inc/core/: osal.h  sysDefs.h  system.h  systemDefs.h
inc/core/config/: platformConfig.h  systemConfig.h
inc/core/feature/: active.h  async.h  buffer.h  log.h  osal.h
inc/core/physics/body/: body2D.h
inc/core/physics/collision/: collision2D.h
inc/core/physics/contact/: contact2D.h
inc/core/physics/shape/: aabb2D.h  circle2D.h  shape2D.h
inc/core/physics/solver/: solver2D.h
inc/core/physics/vector/: vector2D.h
inc/core/physics/world/: world2D.h
inc/driver/: driverCommon.h  driverDefs.h
inc/driver/gfx/bgfx/: driverBgfx.h
inc/driver/physicsBackend/jolt/: driverJolt.h  driverJoltBridge.h
inc/driver/sample/: driverSample.h
inc/service/: serviceCommon.h  serviceDefs.h
inc/service/sample/: serviceSample.h
src/app/: appCommon.c
src/app/engine2D/: app.c
src/app/euclidEngine/: app.c
src/app/sample/: app.c
src/core/: log.c  osal.c  system.c
src/core/feature/: active.c  async.c  buffer.c  log.c  osal.c
src/core/physics/body/: body2D.c
src/core/physics/collision/: collision2D.c
src/core/physics/contact/: contact2D.c
src/core/physics/shape/: aabb2D.c  circle2D.c  shape2D.c
src/core/physics/solver/: solver2D.c
src/core/physics/vector/: vector2D.c
src/core/physics/world/: world2D.c
src/driver/: driverCommon.c
src/driver/gfx/bgfx/: driverBgfx.c
src/driver/physicsBackend/jolt/: driverJolt.c  driverJoltBridge.cpp
src/driver/platform/win32/: driverPlatformWin32.c
src/service/: serviceCommon.c
tests/unit/core/: CMakeLists.txt  testBuffer.c
workspace/: engine2D.code-workspace  euclidEngine.code-workspace
